--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,6 +13,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+        with:
+          repository: 'LalatinaHub/LatinaSub'
       - name: Get secrets
         run: |
           echo ${{ secrets.BOT_TOKEN }} > ./bot_token
@@ -45,4 +47,4 @@ jobs:
           default_author: github_actions
           fetch: false
           tag_push: "--force"
-          message: "Update VPN"
+          message: "Update Accounts"
