--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app/index.js",
   "scripts": {
     "bg": "npm start > log.txt &",
-    "start": "npm install --build-from-source && npx tsc && node ./app/init.js && node ./app/index.js",
+    "start": "npx tsc && node ./app/init.js && node ./app/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,7 +25,7 @@
     "js-base64": "^3.7.3",
     "node-fetch": "^3.3.0",
     "socks-proxy-agent": "^7.0.0",
-    "sqlite3": "^5.1.3",
+    "sqlite3": "^5.1.4",
     "typescript": "^4.9.4"
   },
   "devDependencies": {
